# plexosdb

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.html  CHANGELOG.md  README.md  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  tutorial.html
.doctrees/: CHANGELOG.doctree  environment.pickle  index.doctree  installation.doctree  tutorial.doctree
.doctrees/api/: enums.doctree  exceptions.doctree  index.doctree  plexosdb.doctree  sqlite_manager.doctree  utils.doctree  xml_handler.doctree
.doctrees/howtos/: add_attributes.doctree  add_objects.doctree  add_properties.doctree  add_reports.doctree  bulk_operations.doctree  copy_objects.doctree  create_db.doctree  delete_objects.doctree  import_export.doctree  index.doctree  manage_relationships.doctree  query_database.doctree  remove_non_ascii.doctree  work_with_scenarios.doctree
.github/workflows/: CI.yaml  build-docs.yaml  changelog.yaml  docs.yaml  publish_pypi.yaml  python-app.yaml  release.yaml
_sources/: index.md.txt  installation.md.txt  tutorial.md.txt
_sources/api/: exceptions.md.txt  plexosdb.md.txt  utils.md.txt  xml_handler.md.txt
_sources/howtos/: add_attributes.md.txt  add_objects.md.txt  add_properties.md.txt  add_reports.md.txt  create_db.md.txt  import_export.md.txt  index.md.txt  manage_relationships.md.txt  query_database.md.txt  work_with_scenarios.md.txt
api/: enums.html  exceptions.html  index.html  plexosdb.html  sqlite_manager.html  utils.html  xml_handler.html
docs/source/: CHANGELOG.md  conf.py
docs/source/api/: enums.md  index.md  sqlite_manager.md
docs/source/howtos/: add_attributes.md  add_properties.md  add_reports.md  bulk_operations.md  copy_objects.md  delete_objects.md  index.md  manage_relationships.md  remove_non_ascii.md  work_with_scenarios.md
howtos/: add_attributes.html  add_objects.html  add_properties.html  add_reports.html  bulk_operations.html  copy_objects.html  create_db.html  delete_objects.html  import_export.html  index.html  manage_relationships.html  query_database.html  remove_non_ascii.html  work_with_scenarios.html
src/plexosdb/: __init__.py  __version__.py  api.py  checks.py  db.py  db_manager.py  enums.py  exceptions.py  plexosdb.py  schema.sql  sqlite.py  utils.py  xml_handler.py
src/plexosdb/queries/: object_properties.sql  object_query.sql  property.sql  property_query.sql  simple_object_query.sql
tests/: benchmark.py  benchmark_bulk_properties.py  benchmark_object_properties.py  conftest.py  test_api.py  test_checks.py  test_copy_object_pytest.py  test_csv_fixtures.py  test_db_manager.py  test_db_manager_context_manager.py  test_db_manager_error_handling.py  test_db_manager_executemany.py  test_db_manager_fetchone_dict.py  test_db_manager_insert_records.py  test_db_manager_iterators.py  test_db_mananger_insert_records.py  test_db_mananger_transactions.py  test_enums_functions.py  test_plexos_db.py  test_plexos_db_xml.py  test_plexosdb.py  test_plexosdb_attributes.py  test_plexosdb_check_property_exists.py  test_plexosdb_checks.py  test_plexosdb_copy_object.py  test_plexosdb_copy_object_memberships.py  test_plexosdb_datafile_tag.py  test_plexosdb_delete_object.py  test_plexosdb_from_records.py  test_plexosdb_iterate_properties.py  test_plexosdb_list_methods.py  test_plexosdb_list_objects.py  test_plexosdb_list_update_methods.py  test_plexosdb_properties.py  test_plexosdb_reports.py  test_plexosdb_scenario.py  test_plexosdb_sqlite.py  test_plexosdb_xml.py  test_utils.py  test_utils_build_data_id_map.py  (+3 more)
tests/data/: plexosdb.xml
tests/fixtures/: __init__.py  conftest.py  csv_fixtures.py  example_dbs.py  profiles.py
