[project]
name = "plexosdb"
version = "1.2.2"
readme = "README.md"
license = {file = "LICENSE.txt"}
keywords = ["PLEXOS", "Database", "SQLite"]
authors = [
    { name = "Pedro Andres Sanchez Perez", email = "psanchez@nrel.gov" },
    { name = "Kodi Obika", email = "kodi.obika@nrel.gov" },
    { name = "mcllerena", email = "mcllerena@users.noreply.github.com"},
]
maintainers = [
    { name = "Pedro Andres Sanchez Perez", email = "psanchez@nrel.gov" },
    { name = "Kodi Obika", email = "kodi.obika@nrel.gov" },
    { name = "mcllerena", email = "mcllerena@users.noreply.github.com"},
]
description = "SQLite API for plexos XMLs"
requires-python = ">= 3.11,<3.15"
classifiers = [
    "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Topic :: Software Development :: Build Tools",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Database",

    "Typing :: Typed",
]
dependencies = [
    "loguru",
]

[project.urls]
Documentation = "https://github.com/NREL/plexosdb#readme"
Issues = "https://github.com/NREL/plexosdb/issues"
Source = "https://github.com/NREL/plexosdb"
Changelog = "https://github.com/NREL/plexosdb/blob/master/CHANGELOG.md"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
docs = [
    "furo",
    "sphinx-book-theme",
    "ghp-import",
    "myst-parser",
    "sphinx-copybutton",
    "sphinx-tabs",
    "sphinxcontrib-mermaid",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-multiversion>=0.2.4",
    "sphinxcontrib-versioning>=2.2.1",
    "docstr-coverage>=2.3.2",
]
dev = [
    "ipython>=9.2.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-coverage>=0.0",
    "ruff>=0.11.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.xml", ".sql"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
strict = true
exclude = ["tests/"]

[tool.ruff]
line-length = 110
target-version = "py311"
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "TD",  # flake-8 todos
    "RUF", # Ruff rules
    "N",   # pep8
    "F",   # pyflakes
    "UP",  # pyupgrade
    "D",   # pydocstyle
    "C90", # Complex code
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
extend-ignore = ['D105', 'D107', 'D205', 'D415', 'D418']
pydocstyle.convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "D104"]
"__main__.py" = ["D100", "E402", "F401", "F403", "D104"]
"**/{tests,docs,tools}/*" = ["D100", "D103", "E402"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = [
    "--cov=plexosdb",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=json",
    "--strict-markers",
    "-v",
]
markers = [
    "checks: Functions that check existence of database entities",
    "getters: Functions that get data",
    "adders: Functions that add data",
    "empty_database: Functions for test empty database",
    "export: Functions that export the database.",
    "listing: Functions that list elements of the  database.",
    "object_operations: Operations to objects in the database.",
    "fast: Run test with only master_v9.2R6 XML for fast development testing"
]

[tool.coverage.run]
source = ["src/plexosdb"]
omit = [
  "*/tests/*",
  "*/__pycache__/*",
  "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise AssertionError",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@abstractmethod",
  "@abstract",
]
precision = 2
fail_under = 95

[tool.coverage.html]
directory = "htmlcov"
